# EasyGraphics

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/CreateDevice/: CreateDevice.cpp
app/CreateInstance/: CreateInstance.cpp
app/CreateSwapchain/: CreateSwapchain.cpp  CreateSwapchain.hpp  main.cpp
app/EzgVulkan/: 01_init_vk_instance.cpp  02_init_vk_context.cpp  03_create_swapchain.cpp  CMakeLists.txt  window_system_test.cpp
app/EzgVulkanHpp/: 01_create_context.cpp  01_create_instance.cpp  CMakeLists.txt
app/FirstTriangle/: main.cpp
app/LearnOpenGL/camera_class/: camera_class.cpp
app/LearnOpenGL/ezg_gl_engine/: ezg_gl_engine.cpp
app/LearnOpenGL/hello_triangle/: hello_triangle.cpp
app/LearnOpenGL/hello_triangle_indexed/: hello_triangle_indexed.cpp
app/LearnOpenGL/hello_triangle_textured/: hello_triangle_textured.cpp
app/LearnOpenGL/load_gltf_model/: load_gltf_model.cpp
app/LearnOpenGL/simple_renderer/: custom_scene.cpp  custom_scene.hpp  simple_renderer.cpp
app/LearnOpenGL/using_framebuffer/: using_framebuffer.cpp
app/LearnOpenGL/using_ubo/: using_ubo.cpp
app/select_physical_device/: SelectPhysicalDevice.cpp
core/: CMakeLists.txt
core/eg_engine/: camera.cpp  camera.hpp  engine.cpp  engine.hpp  engine_scene_renderer.cpp  material_system.cpp  material_system.hpp  mesh.cpp  mesh.hpp  scene_system.cpp  scene_system.hpp  texture.cpp  texture.hpp  types.hpp
core/ezg_asset/: asset_loader.hpp
core/ezg_engine/: camera.cpp  camera.hpp  engine.cpp  engine.hpp  engine_scene_renderer.cpp  input_controller.cpp  input_controller.hpp  material_system.cpp  material_system.hpp  mesh.cpp  mesh.hpp  scene_system.cpp  scene_system.hpp  texture.cpp  texture.hpp  types.hpp
core/ezg_gl_renderer/: base.hpp  hello_triangle.cpp  log.hpp
core/ezg_gl_renderer/assets/: aabb.cpp  aabb.hpp  line.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  skybox.cpp  skybox.hpp  texture.cpp  texture.hpp
core/ezg_gl_renderer/engine/: engine.cpp  engine.hpp  render_option.hpp  scene.cpp  scene.hpp  shadow_scene.cpp  shadow_scene.hpp  simple_scene.cpp  simple_scene.hpp
core/ezg_gl_renderer/graphics/: buffer.cpp  buffer.hpp  context.cpp  context.hpp  framebuffer.cpp  framebuffer.hpp  render_target.cpp  render_target.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  uniform_buffer.cpp  uniform_buffer.hpp  vertex_array.cpp  vertex_array.hpp
core/ezg_gl_renderer/managers/: resource_manager.cpp  resource_manager.hpp  shader_manager.cpp  shader_manager.hpp
core/ezg_gl_renderer/renderer/: basic_renderer.cpp  basic_renderer.hpp  frame_info.hpp  render_api.cpp  render_api.hpp  renderer_data.cpp  renderer_data.hpp  scene.cpp  scene.hpp  shadow_map.cpp  shadow_map.hpp
core/ezg_gl_renderer/systems/: camera_system.cpp  camera_system.hpp  gui_system.cpp  gui_system.hpp  input_system.cpp  input_system.hpp  profile_system.cpp  profile_system.hpp  window_system.cpp  window_system.hpp
core/ezg_gl_renderer/utils/: gltf_utils.cpp  gltf_utils.hpp
core/ezg_util/: timer.cpp  timer.hpp
core/ezg_vk/: buffer.cpp  buffer.hpp  command_pool.cpp  command_pool.hpp  common.cpp  common.hpp  context.cpp  context.hpp  debug.hpp  device.cpp  device.hpp  framebuffer.cpp  framebuffer.hpp  functions.cpp  functions.hpp  image.cpp  image.hpp  render_pass.cpp  render_pass.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  vulkan_base.cpp  vulkan_base.hpp  window.cpp  window.hpp  wsi.cpp  wsi.hpp
core/ezg_vk_hpp/: common.hpp  context.cpp  context.hpp  device.cpp  device.hpp  logging.hpp  vk_base.hpp  wsi.cpp  wsi.hpp
core/vulkan_helper/: core.hpp  sys_info.cpp  sys_info.hpp  vk_debug.cpp  vk_debug.hpp  vk_descriptors.cpp  vk_descriptors.hpp  vk_destructor.cpp  vk_destructor.hpp  vk_device.cpp  vk_device.hpp  vk_dispatch.hpp  vk_functions.cpp  vk_functions.hpp  vk_init.cpp  vk_init.hpp  vk_instance.cpp  vk_instance.hpp  vk_library.cpp  vk_library.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_swapchain.cpp  vk_swapchain.hpp  vk_tools.cpp  vk_tools.hpp
docs/: DEV_LOG.md  DEV_LOG_OGL.md  DEV_LOG_VK.md  STUDY_NOTES.md
resources/models/wood_floor/: license.txt  scene.gltf
resources/shaders/: camera_class.fs.glsl  camera_class.vs.glsl  hello_triangle_indexed.fs.glsl  hello_triangle_indexed.vs.glsl  hello_triangle_textured.vs.glsl  model_loading.fs.glsl  model_loading.vs.glsl
resources/shaders/simple_renderer/: background.vs.glsl  background_hdr.fs.glsl  brdf_integration.fs.glsl  brdf_lut.fs.glsl  coords_axis.vs.glsl  cubemap.fs.glsl  cubemap.vs.glsl  debug_quad_depth.fs.glsl  debug_quad_depth.vs.glsl  equirectangular.fs.glsl  equirectangular_converter.fs.glsl  forward.fs.glsl  forward.vs.glsl  framebuffers_screen.fs.glsl  framebuffers_screen.vs.glsl  lines.fs.glsl  microfacet_brdf.fs.glsl  pbr_cook_torrance.fs.glsl  pbr_directional_light.fs.glsl  prefilter_diffuse.fs.glsl  prefilter_specular.fs.glsl  shadowmap_depth.fs.glsl  shadowmap_depth.vs.glsl
resources/shaders/using_framebuffer/: model_loading.vs.glsl
resources/shaders/using_ubo/: framebuffers_screen.vs.glsl  model_loading.fs.glsl  model_loading.vs.glsl
shaders/: tri_mesh_ssbo.vert
shaders/gl/: hello_triangle_indexed.vs.glsl  hello_triangle_textured.fs.glsl
shaders/spv/: colored_triangle.frag.spv  colored_triangle.vert.spv  default_lit.frag.spv  funky_triangle.frag.spv  mesh.frag.spv  mesh.vert.spv  textured_lit.frag.spv  tri_mesh.vert.spv  tri_mesh_descriptors.vert.spv  tri_mesh_pushconstants.vert.spv  tri_mesh_ssbo.vert.spv  triangle.frag.spv  triangle.vert.spv
src/: CMakeLists.txt  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_mesh.cpp
